# veda-embedded-device-control

./: LICENSE  README.md
client/: CMakeLists.txt
client/src/: main.c
server/: CMakeLists.txt
server/include/: config.h  interface.h
server/lib/buzzer/: Makefile  buzzer.c
server/lib/cds/: Makefile  cds.c
server/lib/fnd/: Makefile  fnd.c
server/lib/led/: Makefile  led.c
server/src/core/: main.c  server.c  server.h
server/src/device/: device.c  device.h
server/src/handler/: handler.c  handler.h
server/src/socket/: socket.c  socket.h
